--- a/css/custom.css
+++ b/css/custom.css
@@ -32,3 +32,5 @@ a:hover {
 .imgbolgepasif { padding: 5px; opacity: 0.6;}
 
 .container {padding-bottom: 20px;}
+
+.gizle {color:black; visibility: hidden;}
